Implemented UI for custom pic selection for user

--- a/app/src/main/res/layout/dialog_board_size.xml
+++ b/app/src/main/res/layout/dialog_board_size.xml
@@ -21,7 +21,8 @@
             android:id="@+id/rbEasy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Easy (4x2)" />
+            android:text="Easy (4x2)"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/rbMedium"
