--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
     <color name="color_grey">#E0E0E0</color>
     <color name="color_progress_none">#DC1E0B</color>
     <color name="color_progress_full">#35BA01</color>
+    <color name="primaryColor">#37474f</color>
+    <color name="primaryLightColor">#62727b</color>
+    <color name="primaryDarkColor">#102027</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="primaryColorLightTheme">#2e7d32</color>
+    <color name="primaryLightColorLightTheme">#60ad5e</color>
+    <color name="primaryDarkColorLightTheme">#005005</color>
+    <color name="primaryTextColorLightTheme">#ffffff</color>
 </resources>
