--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/mi_refresh"
         android:icon="@drawable/ic_refresh"
-        android:title="Refresh"
-        app:showAsAction="always" />
+        android:title="@string/refresh"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
     <item
         android:id="@+id/mi_new_size"
-        android:title="Choose new size"
+        android:title="@string/choose_new_size"
         app:showAsAction="never" />
     <item
         android:id="@+id/mi_custom"
-        android:title="Create Custom Game"
+        android:title="@string/create_custom_game"
         app:showAsAction="never" />
     <item
         android:id="@+id/mi_download"
-        android:title="Download Custom Game"
+        android:title="@string/download_custom_game"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mi_available_games"
+        android:title="@string/available_game_names"
         app:showAsAction="never" />
 </menu>
